--- a/department-service.yml
+++ b/department-service.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ms_company
     username: root
-    password: root
+    password: roots
   jpa:
     hibernate:
       ddl-auto: update
