--- a/department-service.yml
+++ b/department-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ms_company
-    username: roots
-    password: roots
+    username: root
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
