--- a/employee-service.yml
+++ b/employee-service.yml
@@ -14,6 +14,6 @@ eureka:
     client:
       serviceUrl:
         defaultZone: http://localhost:8761/eureka/
-project:
+spring:
   boot:
-    msg: helloworld
+    message: "hello world"
