--- a/employee-service.yml
+++ b/employee-service.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/ms_company
     username: root
     password: root
+    driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
