--- a/employee-service.yml
+++ b/employee-service.yml
@@ -5,6 +5,7 @@ spring:
     password: root
     driverClassName: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
     show_sql: true
