--- a/employee-service.yml
+++ b/employee-service.yml
@@ -1,6 +1,4 @@
 spring:
-    boot:
-      message: hello-world
   datasource:
     url: jdbc:mysql://localhost:3306/ms_company
     username: root
@@ -16,3 +14,5 @@ eureka:
     client:
       serviceUrl:
         defaultZone: http://localhost:8761/eureka/
+project:
+  msg: hello
