--- a/employee-service.yml
+++ b/employee-service.yml
@@ -14,4 +14,4 @@ eureka:
     client:
       serviceUrl:
         defaultZone: http://localhost:8761/eureka/
-msg: "hello world..! namasthe"
+msg: "hello world..! namasthe java"
